API automation framework updated